--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ h2 {
     align-items: center;
     border-radius: 30px;
     box-shadow: 2px 2px 1px black;
+    overflow: hidden;
 }
 
 #ecran {
@@ -37,6 +38,9 @@ h2 {
     display: flex;
     justify-content: end;
     align-items: center;
+    overflow: auto;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 #input {
